@@ -1,60 +1,61 @@
 package io.github.genie.sql.api;
 
+import org.jetbrains.annotations.NotNull;
+
+import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
+import java.util.Iterator;
 import java.util.List;
+import java.util.Spliterator;
+import java.util.Spliterators;
 import java.util.function.Predicate;
 import java.util.function.UnaryOperator;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import java.util.stream.StreamSupport;
 
 public interface Lists {
 
-    static <E> List<E> of(E e1, E e2) {
-        return List.of(e1, e2);
-    }
-
-    static <E> List<E> of(E e1, E e2, E e3) {
-        return List.of(e1, e2, e3);
-    }
-
-    static <E> List<E> of(E e1, E e2, E e3, E e4) {
-        return List.of(e1, e2, e3, e4);
-    }
-
-    static <E> List<E> of(E e1, E e2, E e3, E e4, E e5) {
-        return List.of(e1, e2, e3, e4, e5);
-    }
-
-    static <E> List<E> of(E e1, E e2, E e3, E e4, E e5, E e6) {
-        return List.of(e1, e2, e3, e4, e5, e6);
-    }
-
-    static <E> List<E> of(E e1, E e2, E e3, E e4, E e5, E e6, E e7) {
-        return List.of(e1, e2, e3, e4, e5, e6, e7);
-    }
-
-    static <E> List<E> of(E e1, E e2, E e3, E e4, E e5, E e6, E e7, E e8) {
-        return List.of(e1, e2, e3, e4, e5, e6, e7, e8);
-    }
-
-    static <E> List<E> of(E e1, E e2, E e3, E e4, E e5, E e6, E e7, E e8, E e9) {
-        return List.of(e1, e2, e3, e4, e5, e6, e7, e8, e9);
-    }
-
-    static <E> List<E> of(E e1, E e2, E e3, E e4, E e5, E e6, E e7, E e8, E e9, E e10) {
-        return List.of(e1, e2, e3, e4, e5, e6, e7, e8, e9, e10);
+    @SafeVarargs
+    static <E> List<E> of(E... es) {
+        return Arrays.asList(es);
     }
 
     static <E> List<E> of(E e) {
-        return List.of(e);
+        return Collections.singletonList(e);
     }
 
     static <E> List<E> of() {
-        return List.of();
+        return Collections.emptyList();
     }
 
     static <T> Stream<T> iterate(T seed, Predicate<? super T> hasNext, UnaryOperator<T> next) {
-        return Stream.iterate(seed, hasNext, next);
+        final Iterator<T> iterator = getIterator(seed, hasNext, next);
+        return StreamSupport.stream(Spliterators.spliteratorUnknownSize(
+                iterator,
+                Spliterator.ORDERED | Spliterator.IMMUTABLE), false);
+    }
+
+    @NotNull
+    static <T> Iterator<T> getIterator(T seed, Predicate<? super T> hasNext, UnaryOperator<T> next) {
+        Object NONE = new Object();
+        return new Iterator<T>() {
+            @SuppressWarnings("unchecked")
+            T t = (T) NONE;
+
+            @Override
+            public boolean hasNext() {
+                return t == NONE || hasNext.test(t);
+            }
+
+            @Override
+            public T next() {
+                T result = (t == NONE) ? seed : t;
+                t = next.apply(result);
+                return result;
+            }
+        };
     }
 
     static <T> List<T> concat(Collection<? extends T> collection, Collection<? extends T> value) {
